--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "nonebot_plugin_RanFurryPic"
-version = "1.0.3"
+version = "1.0.3.3"
 description = "基于NoneBot2进行适配的兽云随机毛图插件"
 authors = [
     {name = "Ekac00", email = "2396382559@qq.com"},
 ]
-dependencies = ["nonebot2", "requests"]
+dependencies = ["nonebot2", "requests", "nonebot-adapter-onebot"]
 requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "MIT"}
