--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "基于NoneBot2进行适配的兽云随机毛图插件"
 authors = [
     {name = "Ekac", email = "2396382559@qq.com"},
 ]
-dependencies = ["nonebot2", "httpx", "nonebot-adapter-onebot"]
+dependencies = ["nonebot2", "httpx", "nonebot-plugin-send-anything-anywhere"]
 requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
